[project]
name = "splat-viewer"  
version = "0.21.0"  
description = "A viewer for gaussian-splatting reconstructions"  
readme = "README.md" 
requires-python = ">=3.10"
license = {file = "LICENSE"}

maintainers = [
  {name = "Oliver Batchelor", email = "oliver.batchelor@canterbury.ac.nz" } 
]

dependencies = [
  "beartype", 
  "taichi-nightly>=1.8.0", 
  "taichi-splatting >= 0.21.2",
  "tqdm", 
  "tensordict",
  "plyfile",
  "pyside6",
  "natsort",
  "opencv_python",
  "pyrender",
  "roma"

]


[project.urls] 
"Homepage" = "https://github.com/uc-vision/splat-viewer"

[build-system]
# Hatching
requires = ["hatchling>=1.5.0"]
build-backend = "hatchling.build"

[project.scripts]  # Optional
splat-viewer = "splat_viewer.scripts.splat_viewer:main"

debug-tiles = "splat_viewer.scripts.debug_tiles:main"
label-foreground = "splat_viewer.scripts.label_foreground:main"
export-workspace = "splat_viewer.scripts.export_workspace:main"
export-rgb-cloud = "splat_viewer.scripts.export_rgb_cloud:main"

crop-foreground = "splat_viewer.scripts.crop_foreground:main"

[tool.ruff]
indent-width = 2

[tool.pytest.ini_options]
filterwarnings = [
    # disable "UserWarning: The .grad attribute of a Tensor that is not a leaf Tensor"
    "ignore::UserWarning"  
]


[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]


[tool.pixi.tasks]
